[package]
name = "winit-blit"
version = "0.0.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"
description = "Reserved. Blit directly to Winit Windows"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.3"
winapi = {version = "0.3", features = ["windef", "winuser", "wingdi"]}

[dev-dependencies]
winit = "0.22.0"
