[package]
name = "winit-blit"
version = "0.0.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"
description = "Reserved. Blit directly to Winit Windows"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.3"
rayon = {version = "1", optional = true}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["windef", "winuser", "wingdi"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.55"
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"]

[dev-dependencies]
winit = { version = "0.22.0", features = ["web-sys"] }
serial_test = "*"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
